# livekit-rust-sdks

./: Cargo.toml
device-info/src/: lib.rs
examples/remote_control_client/: Cargo.toml
examples/remote_control_client/src/: main.rs
examples/remote_control_host/: Cargo.toml
examples/remote_control_host/src/: main.rs
livekit-protocol/src/: lib.rs
soxr-sys/src/: rint.h  soxr.c
webrtc-sys/: build.rs
webrtc-sys/src/: video_decoder_factory.cpp  video_encoder_factory.cpp
webrtc-sys/src/mf/: mf_decoder_factory.cpp  mf_decoder_factory.h  mf_encoder_factory.cpp  mf_encoder_factory.h  mf_video_decoder_impl.cpp  mf_video_decoder_impl.h  mf_video_encoder_impl.cpp  mf_video_encoder_impl.h
webrtc-sys/src/vaapi/: vaapi_decoder_factory.cpp  vaapi_decoder_factory.h  vaapi_decoder_impl.cpp  vaapi_decoder_impl.h
