[package]
name = "remote_control_client"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
egui = "0.33.3"
egui-wgpu = "0.33.3"
emath = "0.33.3"
env_logger.workspace = true
livekit.workspace = true
livekit-api.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1.18"
wgpu = "28.0"
winit = "0.30.12"
