[package]
name = "remote_control_host"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
enigo = "0.6.1"
env_logger.workspace = true
lazy_static.workspace = true
livekit.workspace = true
livekit-api.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
